[gd_scene load_steps=44 format=2]

[ext_resource path="res://UI scenes/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Theme/kenneyUI-green.tres" type="Theme" id=2]
[ext_resource path="res://MainScene/Blender/IndividualBlender/IndividualBlender.gd" type="Script" id=3]
[ext_resource path="res://StephenAssets/LoadingBar/Loading Bar white.png" type="Texture" id=4]
[ext_resource path="res://StephenAssets/LoadingBar/Loading Bar empty.png" type="Texture" id=5]
[ext_resource path="res://StephenAssets/UI9Patches/Orange UI.png" type="Texture" id=6]
[ext_resource path="res://StephenAssets/misc/Blender (1).png" type="Texture" id=7]
[ext_resource path="res://StephenAssets/LoadingBar/Loading Bar full.png" type="Texture" id=8]
[ext_resource path="res://StephenAssets/Buttons/Big Button/Big button pressed.png" type="Texture" id=9]
[ext_resource path="res://StephenAssets/Buttons/Big Button/Big button unpressed.png" type="Texture" id=10]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile003.png" type="Texture" id=11]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile012.png" type="Texture" id=12]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile016.png" type="Texture" id=13]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile015.png" type="Texture" id=14]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile002.png" type="Texture" id=15]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile005.png" type="Texture" id=16]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile008.png" type="Texture" id=17]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile011.png" type="Texture" id=18]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile017.png" type="Texture" id=19]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile014.png" type="Texture" id=20]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile019.png" type="Texture" id=21]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile020.png" type="Texture" id=22]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile021.png" type="Texture" id=23]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile022.png" type="Texture" id=24]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile023.png" type="Texture" id=25]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile024.png" type="Texture" id=26]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile004.png" type="Texture" id=27]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile006.png" type="Texture" id=28]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile007.png" type="Texture" id=29]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile025.png" type="Texture" id=30]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile009.png" type="Texture" id=31]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile018.png" type="Texture" id=32]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile013.png" type="Texture" id=33]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile001.png" type="Texture" id=34]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile000.png" type="Texture" id=35]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile026.png" type="Texture" id=36]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile027.png" type="Texture" id=37]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile028.png" type="Texture" id=38]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile029.png" type="Texture" id=39]
[ext_resource path="res://StephenAssets/misc/BlenderAnim/tile010.png" type="Texture" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 31 ), ExtResource( 40 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 33 ) ],
"loop": false,
"name": "Start",
"speed": 13.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "End",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 32 ) ],
"loop": true,
"name": "Loop",
"speed": 12.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "EndAnimation"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/TextureRect/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "End" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/TextureRect/AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "StartAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/TextureRect/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Start", "Loop" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/TextureRect/AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="IndividualBlender" type="NinePatchRect"]
margin_right = 90.0
margin_bottom = 145.0
rect_min_size = Vector2( 90, 145 )
theme = ExtResource( 2 )
texture = ExtResource( 6 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 80.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 135.0

[node name="ItemSlot" parent="MarginContainer/HBoxContainer/Left" instance=ExtResource( 1 )]
margin_right = 25.0
margin_bottom = 25.0

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/HBoxContainer/Left"]
margin_top = 29.0
margin_right = 25.0
margin_bottom = 129.0
max_value = 3.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 8 )
fill_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 79.0
margin_bottom = 135.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 100.0
texture = ExtResource( 7 )
stretch_mode = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="MarginContainer/HBoxContainer/VBoxContainer/TextureRect"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 25, 50 )
z_index = 5
frames = SubResource( 1 )
animation = "End"
frame = 10
playing = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 50.0
margin_bottom = 134.0
rect_min_size = Vector2( 50, 30 )

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 50.0
margin_bottom = 30.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EndAnimation = SubResource( 3 )
anims/StartAnimation = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[connection signal="timer_complete" from="." to="." method="_on_IndividualBlender_timer_complete"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="MarginContainer/HBoxContainer/Left/ItemSlot"]
